# fbla_2024_Project

./: Cargo.toml  build.rs
data/: db.csv
src/: TODO.md  csv.rs  gui.rs  help.txt  main.rs  speedb_impl.rs  test.csv
ui/: appwindow.slint
