[package]
name = "fbla_2024_Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
slint = "1.6.0"
surrealdb = { version = "1.5.0", features = ["kv-speedb"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
